--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,10 @@ body {
   color: $light-grey-0;
 }
 
+*,*::after,*::before{
+  font-family: 'Gothic A1', sans-serif;
+}
+
 a {
   color: inherit;
   text-decoration: none;
